# CACT

./: .gitignore  Manifest.toml  README.md  cact_env.yml  pluto_AoG_test.jl  pyproject.toml
.continue/agents/: agent.yaml
src/CACT/: db_export.py  main.py  mlflow_delete_runs_by_tag.py  new_experiments.py  new_experiments_evalution.ipynb  postgresql_export.py  run_new_experiments.py
src/CACT/auction_module/: auction.py  wdp.py
src/CACT/core_module/: carrier.py  depot.py  instance.py  request.py  solution.py  tour.py  vertex.py
src/CACT/customer_acceptance_module/: acceptance_measure.py  customer_acceptance.py
src/CACT/evaluation_module/: data_preparation.py  db_functions.py  filter_module.py  interactive_evaluation.ipynb  interactive_evaluation_parquet.ipynb  interactive_evaluation_parquet_dask.ipynb  key_mapping.py  my_theming.py  p9_themes.py  random_benchmark_no_optimization.ipynb  true_vs_pred.ipynb  value_mapping.py
src/CACT/instance_module/: VRP_euclidean_instance_creation.py  VRP_vienna_instance_creation.py  check_data.py  folium_plot.py  vienna_data_handling.py
src/CACT/julia_cact/: Manifest.toml  Project.toml  README.md  data_gen.jl  metrics.jl  new_experiments backup 1.jl  new_experiments.jl  target_function.jl  tsp.jl
src/CACT/routing_module/: bundle_insertion.py  bundle_insertion_feasibility_check.py  dynamic_routing.py  insertion_criterion.py  objective_function.py  pyvrp_stopping_criterion.py  request_insertion_feasibility_check.py  routing_solver.py  static_routing.py
src/CACT/solver_module/: config.py  solver.py  workflow.py
(+207 files in other folders)
