[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CACT"
version = "0.1.0"
dependencies = [] # Add external libraries here (e.g., "requests", "numpy")
requires-python = ">= 3.10.19"
authors = [{name = "Steffen Elting"}]
description = "A python library to model and solve the optimization problems in Combinatorial Auction-based Collaborative Transportation (CACT)."